Implemented view change from onboarding to chat (login feature not exist yet)