@@ -27,5 +27,7 @@ tasks.withType(JavaCompile) {
 }
 
 run {
-    jvmArgs += ["--enable-preview"]
+    jvmArgs += ["--enable-preview", "--enable-native-access=javafx.graphics", "-Dprism.order=sw"]
+    environment "DISPLAY", ":0"
+    environment "WAYLAND_DISPLAY", "wayland-0"
 }
